# AIQAHub

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: d8891057ed31_add_document_review_and_coverage_tables.py
app/: __init__.py  main.py
app/connectors/: __init__.py  base.py
app/core/: config.py  events.py  exceptions.py  permissions.py
app/crud/: __init__.py  artifact.py  asset.py  base.py  coverage.py  document.py  environment.py  execution.py  execution_task.py  project.py  quality_rule.py  review.py  suite.py
app/db/: init_db.py  metadata.py  seed.py  session.py
app/models/: __init__.py  ai_insight.py  artifact.py  asset.py  asset_link.py  asset_revision.py  audit_log.py  coverage.py  document.py  environment.py  execution.py  execution_task.py  project.py  quality_rule.py  quality_rule_revision.py  review.py  role.py  suite.py  user.py
app/notifications/: base.py  dingtalk.py  email.py  notifier.py  wecom.py
app/orchestration/: engine.py  (+3 more)
docs/: architecture-and-runbook.md  core-value.md  current-feature-review.md  deployment.md  detailed-design.md  execution-progress.md  implementation-plan.md  product-architecture.md  product-roadmap.md  project-design-overview.md  project-review-and-organization.md  quality-control-enhancements-summary.md  task-tracking.md  technical-architecture.md
frontend/: index.html  package-lock.json  package.json
migrations/: env.py  script.py.mako
scripts/: dev.sh  init_db.py
(+141 files in other folders)
